src/norx/oobject.nim


proc setAnimFrequencyRecursive*(pstObject: ptr orxOBJECT;
    fFrequency: orxFLOAT) {.cdecl, importc: "orxObject_SetAnimFrequencyRecursive",
                          dynlib: libORX.}
  ## Sets the relative animation frequency for an object and its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fFrequency     Frequency to set: < 1.0 for slower than initial, > 1.0 for faster than initial
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getAnimFrequency*(pstObject: ptr orxOBJECT): orxFLOAT {.cdecl,
    importc: "orxObject_GetAnimFrequency", dynlib: libORX.}
  ## Gets an object's relative animation frequency.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return Animation frequency / -orxFLOAT_1

proc setCurrentAnim*(pstObject: ptr orxOBJECT; zAnimName: cstring): orxSTATUS {.
    cdecl, importc: "orxObject_SetCurrentAnim", dynlib: libORX.}
  ## Sets current animation for an object. This function switches the currently displayed animation of the object
  ##  immediately. Compare this with orxObject_SetTargetAnim().
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zAnimName      Animation name (config's one) to set / nil
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setCurrentAnimRecursive*(pstObject: ptr orxOBJECT;
                                       zAnimName: cstring) {.cdecl,
    importc: "orxObject_SetCurrentAnimRecursive", dynlib: libORX.}
  ## Sets current animation for an object and its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zAnimName      Animation name (config's one) to set / nil
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setTargetAnim*(pstObject: ptr orxOBJECT; zAnimName: cstring): orxSTATUS {.
    cdecl, importc: "orxObject_SetTargetAnim", dynlib: libORX.}
  ## Sets target animation for an object. The animations are sequenced on an object according to the animation link graph
  ##  defined by its AnimationSet. The sequence follows the graph and tries to reach the target animation. Use
  ##  orxObject_SetCurrentAnim() to switch the animation without using the link graph.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zAnimName      Animation name (config's one) to set / nil
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setTargetAnimRecursive*(pstObject: ptr orxOBJECT;
                                      zAnimName: cstring) {.cdecl,
    importc: "orxObject_SetTargetAnimRecursive", dynlib: libORX.}
  ## Sets target animation for an object and its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zAnimName      Animation name (config's one) to set / nil
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getCurrentAnim*(pstObject: ptr orxOBJECT): cstring {.cdecl,
    importc: "orxObject_GetCurrentAnim", dynlib: libORX.}
  ## Gets current animation.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      Current animation / orxSTRING_EMPTY

proc getTargetAnim*(pstObject: ptr orxOBJECT): cstring {.cdecl,
    importc: "orxObject_GetTargetAnim", dynlib: libORX.}
  ## Gets target animation.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      Target animation / orxSTRING_EMPTY

proc isCurrentAnim*(pstObject: ptr orxOBJECT; zAnimName: cstring): orxBOOL {.
    cdecl, importc: "orxObject_IsCurrentAnim", dynlib: libORX.}
  ## Is current animation test.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zAnimName      Animation name (config's one) to test
  ##  @return      orxTRUE / orxFALSE

proc isTargetAnim*(pstObject: ptr orxOBJECT; zAnimName: cstring): orxBOOL {.
    cdecl, importc: "orxObject_IsTargetAnim", dynlib: libORX.}
  ## Is target animation test.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zAnimName      Animation name (config's one) to test
  ##  @return      orxTRUE / orxFALSE

proc setSpeed*(pstObject: ptr orxOBJECT; pvSpeed: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxObject_SetSpeed", dynlib: libORX.}
  ## @}
  ## @name Physics / dynamics
  ##  @{
  ## Sets an object speed.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvSpeed        Speed to set
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setRelativeSpeed*(pstObject: ptr orxOBJECT;
                                pvRelativeSpeed: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxObject_SetRelativeSpeed", dynlib: libORX.}
  ## Sets an object speed relative to its rotation/scale.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvRelativeSpeed Relative speed to set
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setAngularVelocity*(pstObject: ptr orxOBJECT; fVelocity: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxObject_SetAngularVelocity", dynlib: libORX.}
  ## Sets an object angular velocity.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fVelocity      Angular velocity to set (radians/seconds)
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setCustomGravity*(pstObject: ptr orxOBJECT;
                                pvCustomGravity: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxObject_SetCustomGravity", dynlib: libORX.}
  ## Sets an object custom gravity.
  ##  @param[in]   _pstObject        Concerned object
  ##  @param[in]   _pvCustomGravity  Custom gravity to set / nil to remove it
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getSpeed*(pstObject: ptr orxOBJECT; pvSpeed: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetSpeed", dynlib: libORX.}
  ## Gets an object speed.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]   _pvSpeed       Speed to get
  ##  @return      Object speed / nil

proc getRelativeSpeed*(pstObject: ptr orxOBJECT;
                                pvRelativeSpeed: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetRelativeSpeed", dynlib: libORX.}
  ## Gets an object relative speed.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pvRelativeSpeed Relative speed to get
  ##  @return      Object relative speed / nil

proc getAngularVelocity*(pstObject: ptr orxOBJECT): orxFLOAT {.cdecl,
    importc: "orxObject_GetAngularVelocity", dynlib: libORX.}
  ## Gets an object angular velocity.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      Object angular velocity (radians/seconds)

proc getCustomGravity*(pstObject: ptr orxOBJECT;
                                pvCustomGravity: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetCustomGravity", dynlib: libORX.}
  ## Gets an object custom gravity.
  ##  @param[in]   _pstObject        Concerned object
  ##  @param[out]  _pvCustomGravity  Custom gravity to get
  ##  @return      Object custom gravity / nil is object doesn't have any

proc getMass*(pstObject: ptr orxOBJECT): orxFLOAT {.cdecl,
    importc: "orxObject_GetMass", dynlib: libORX.}
  ## Gets an object mass.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      Object mass

proc getMassCenter*(pstObject: ptr orxOBJECT; pvMassCenter: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetMassCenter", dynlib: libORX.}
  ## Gets an object center of mass (object space).
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pvMassCenter   Mass center to get
  ##  @return      Mass center / nil

proc applyTorque*(pstObject: ptr orxOBJECT; fTorque: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxObject_ApplyTorque", dynlib: libORX.}
  ## Applies a torque.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fTorque        Torque to apply
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc applyForce*(pstObject: ptr orxOBJECT; pvForce: ptr orxVECTOR;
                          pvPoint: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxObject_ApplyForce", dynlib: libORX.}
  ## Applies a force.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvForce        Force to apply
  ##  @param[in]   _pvPoint        Point (world coordinates) where the force will be applied, if nil, center of mass will be used
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc applyImpulse*(pstObject: ptr orxOBJECT; pvImpulse: ptr orxVECTOR;
                            pvPoint: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxObject_ApplyImpulse", dynlib: libORX.}
  ## Applies an impulse.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvImpulse      Impulse to apply
  ##  @param[in]   _pvPoint        Point (world coordinates) where the impulse will be applied, if nil, center of mass will be used
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc raycast*(pvBegin: ptr orxVECTOR; pvEnd: ptr orxVECTOR;
                       u16SelfFlags: orxU16; u16CheckMask: orxU16;
                       bEarlyExit: orxBOOL; pvContact: ptr orxVECTOR;
                       pvNormal: ptr orxVECTOR): ptr orxOBJECT {.cdecl,
    importc: "orxObject_Raycast", dynlib: libORX.}
  ## Issues a raycast to test for potential objects in the way.
  ##  @param[in]   _pvBegin        Beginning of raycast
  ##  @param[in]   _pvEnd          End of raycast
  ##  @param[in]   _u16SelfFlags   Selfs flags used for filtering (0xFFFF for no filtering)
  ##  @param[in]   _u16CheckMask   Check mask used for filtering (0xFFFF for no filtering)
  ##  @param[in]   _bEarlyExit     Should stop as soon as an object has been hit (which might not be the closest)
  ##  @param[in]   _pvContact      If non-null and a contact is found it will be stored here
  ##  @param[in]   _pvNormal       If non-null and a contact is found, its normal will be stored here
  ##  @return Colliding orxOBJECT / nil

proc setTextString*(pstObject: ptr orxOBJECT; zString: cstring): orxSTATUS {.
    cdecl, importc: "orxObject_SetTextString", dynlib: libORX.}
  ## @}
  ## @name Text
  ##  @{
  ## Sets object text string, if object is associated to a text.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zString        String to set
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getTextString*(pstObject: ptr orxOBJECT): cstring {.cdecl,
    importc: "orxObject_GetTextString", dynlib: libORX.}
  ## Gets object text string, if object is associated to a text.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxSTRING / orxSTRING_EMPTY

proc getBoundingBox*(pstObject: ptr orxOBJECT; pstBoundingBox: ptr orxOBOX): ptr orxOBOX {.
    cdecl, importc: "orxObject_GetBoundingBox", dynlib: libORX.}
  ## @}
  ## @name Bounding box
  ##  @{
  ## Gets object's bounding box (OBB).
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pstBoundingBox Bounding box result
  ##  @return      Bounding box / nil

proc addFX*(pstObject: ptr orxOBJECT; zFXConfigID: cstring): orxSTATUS {.
    cdecl, importc: "orxObject_AddFX", dynlib: libORX.}
  ## @}
  ## @name FX
  ##  @{
  ## Adds an FX using its config ID.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zFXConfigID    Config ID of the FX to add
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc addFXRecursive*(pstObject: ptr orxOBJECT; zFXConfigID: cstring) {.
    cdecl, importc: "orxObject_AddFXRecursive", dynlib: libORX.}
  ## Adds an FX to an object and its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zFXConfigID    Config ID of the FX to add
